# smart-safe

./: .gitignore  CMakeLists.txt  README.md  refactoring_plan.md
main/: .env.example  CMakeLists.txt  config.example.h  keypad.c  keypad.h  main.c
main/comm_task/: comm_task.c  comm_task.h
main/command_handler/: command_handler.c  command_handler.h
main/config/: config.c  config.h  config.h.example
main/control_task/: control_task.c  control_task.h
main/event_publisher/: event_publisher.c  event_publisher.h
main/json_protocol/: json_protocol.c  json_protocol.h
main/keypad/: keypad.c  keypad.h
main/lcd_display/: lcd_display.c  lcd_display.h
main/led/: leds.c  leds.h
main/mpu6050/: mpu6050.c  mpu6050.h
main/pin_manager/: pin_manager.c  pin_manager.h
main/queue_manager/: queue_manager.c  queue_manager.h
main/state_machine/: state_machine.c  state_machine.h
src/: main.cpp
