idf_component_register(SRCS "main.c"
                            "control_task/control_task.c"
                            "comm_task/comm_task.c"
                            "queue_manager/queue_manager.c"
                            "json_protocol/json_protocol.c"
                            "keypad/keypad.c"
                            "state_machine/state_machine.c"
                            "led/leds.c"
                            "mpu6050/mpu6050.c"
                            "pin_manager/pin_manager.c"
                            "event_publisher/event_publisher.c"
                            "command_handler/command_handler.c"
                       INCLUDE_DIRS "." "keypad" "pin_manager" "event_publisher" "command_handler"
                       )
